# search-strings

./: .gitignore  README.md  pyproject.toml  run.py  search-strings.py  search-strings.spec  setup.py
search_strings/: __init__.py  __main__.py  cli.py  config.py  dependencies.py  file_handler.py  orchestrator.py  utils.py
search_strings/replacers/: __init__.py  base.py  file_replacer.py
search_strings/reporters/: __init__.py  base.py  csv_reporter.py  excel_reporter.py  html_reporter.py  json_reporter.py  replace_reporter.py
search_strings/searchers/: __init__.py  base.py  filename_searcher.py  grep_searcher.py  ripgrep_searcher.py
search_strings/ui/: __init__.py  rich_output.py
